fix(frontend): prevent sticky hover on mobile history status legend icons

--- a/frontend/src/features/date/presentation/postcardStatusLegend/PostcardStatusLegend.module.scss
+++ b/frontend/src/features/date/presentation/postcardStatusLegend/PostcardStatusLegend.module.scss
@@ -1,4 +1,5 @@
 @use '@styles/config/colors' as *;
+@use '@styles/mixins/toolbarIconButton' as iconButton;
 
 .root {
   // flex: 0 0 50%;
@@ -212,8 +213,10 @@
     color: $color-font-enabled-light;
   }
 
-  .item.inactive:hover .icon {
-    color: $color-font-enabled;
+  @include iconButton.toolbar-key-hover-fine-pointer {
+    .item.inactive:hover .icon {
+      color: $color-font-enabled;
+    }
   }
 
   .item.active .icon {
